experiment/openrouter-run/stage3-rac/zero_shot/compile_logs/LargestPerimeter.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/LargestPerimeter/LargestPerimeter.java:12: error: cannot find symbol
        Arrays.sort(A);
        ^
  symbol:   variable Arrays
  location: class LargestPerimeter
1 error
1 warning
